--- a/src/main/resources/Config.properties
+++ b/src/main/resources/Config.properties
@@ -27,6 +27,8 @@ CLASSES_PATH = /home/marcos/Projetos/.datasets/rotten/output/classes.txt
 
 # -------------------------------------- JRC1  ----------------------------------------- #
 CORPUS_JRC = /home/marcos/Projetos/.datasets/EuroVoc/JRC1
+TRAIN_JRC = /home/marcos/Projetos/.datasets/EuroVoc/jrc1-train
+TEST_JRC = /home/marcos/Projetos/.datasets/EuroVoc/jrc1-test
 INDEX_JRC = /home/marcos/Projetos/.datasets/EuroVoc/jrc1-output/index
 CONCEPT_JRC = /home/marcos/Projetos/.datasets/EuroVoc/jrc1-output/concept
 CLASSES_PATH_JRC = /home/marcos/Projetos/.datasets/EuroVoc/jrc1-output/classes.txt
@@ -36,4 +38,18 @@ CONCEPTS_UNDESC_FILE_PATH = /home/marcos/Projetos/.datasets/EuroVoc/JRC1/uf_en.x
 CONCEPTS_HIERARCHY_FILE_PATH = /home/marcos/Projetos/.datasets/EuroVoc/JRC1/relation_bt.xml
 FEATURE_PATH_JRC = /home/marcos/Projetos/.datasets/EuroVoc/jrc1-output/features
 FEATURE_PROPAGATED_PATH_JRC = /home/marcos/Projetos/.datasets/EuroVoc/jrc1-output/propagated
+TRAIN_CV_JRC = /home/marcos/Projetos/.datasets/EuroVoc/jrc1-train-cv
 
+
+# -------------------------------------- REUTERS  ----------------------------------------- #
+CORPUS_REUTERS = /home/marcos/Projetos/.datasets/reuters/training
+TRAIN_REUTERS = /home/marcos/Projetos/.datasets/reuters/training
+TEST_REUTERS = /home/marcos/Projetos/.datasets/reuters/test
+INDEX_REUTERS = /home/marcos/Projetos/.datasets/reuters/output/index
+CONCEPT_REUTERS = /home/marcos/Projetos/.datasets/reuters/output/concept
+CLASSES_PATH_REUTERS = /home/marcos/Projetos/.datasets/reuters/output/classes.txt
+CONCEPT_GRAPH_REUTERS = /home/marcos/Projetos/.datasets/reuters/output/co-occurrences.txt
+FEATURE_PATH_REUTERS = /home/marcos/Projetos/.datasets/reuters/output/features
+FEATURE_PROPAGATED_PATH_REUTERS = /home/marcos/Projetos/.datasets/reuters/output/propagated
+DATASET_REUTERS = training
+CLASSES_REUTERS = /home/marcos/Projetos/.datasets/reuters/cats.txt
