--- a/src/main/resources/Config.properties
+++ b/src/main/resources/Config.properties
@@ -26,24 +26,21 @@ CLASSES_PATH = /home/marcos/Projetos/.datasets/rotten/output/classes.txt
 
 
 # -------------------------------------- JRC3  ----------------------------------------- #
-CORPUS_JRC = /home/marcos/Projetos/.datasets/EuroVoc/JRC3
-TRAIN_JRC = /home/marcos/Projetos/.datasets/EuroVoc/jrc3-train
-TEST_JRC = /home/marcos/Projetos/.datasets/EuroVoc/jrc3-test
-INDEX_JRC = /home/marcos/Projetos/.datasets/EuroVoc/jrc3-output/index
-CONCEPT_JRC = /home/marcos/Projetos/.datasets/EuroVoc/jrc3-output/concept
-CLASSES_PATH_JRC = /home/marcos/Projetos/.datasets/EuroVoc/jrc3-output/classes.txt
-CONCEPT_GRAPH_JRC = /home/marcos/Projetos/.datasets/EuroVoc/jrc3-output/co-occurrences.txt
-CONCEPTS_DESC_FILE_PATH = /home/marcos/Projetos/.datasets/EuroVoc/JRC3/desc_en.xml
-CONCEPTS_UNDESC_FILE_PATH = /home/marcos/Projetos/.datasets/EuroVoc/JRC3/uf_en.xml
-CONCEPTS_HIERARCHY_FILE_PATH = /home/marcos/Projetos/.datasets/EuroVoc/JRC3/relation_bt.xml
-FEATURE_PATH_JRC = /home/marcos/Projetos/.datasets/EuroVoc/jrc3-output/features
-FEATURE_PROPAGATED_PATH_JRC = /home/marcos/Projetos/.datasets/EuroVoc/jrc3-output/propagated
-TRAIN_CV_JRC = /home/marcos/Projetos/.datasets/EuroVoc/jrc3-train-cv
-
-
+CORPUS_JRC = C:\\users\\lelep\\Desktop\\marcos\\JRC3
+TRAIN_JRC = C:\\users\\lelep\\Desktop\\marcos\\jrc-train
+TEST_JRC = C:\\users\\lelep\\Desktop\\marcos\\jrc-test
+INDEX_JRC = C:\\users\\lelep\\Desktop\\marcos\\jrc-output\\index
+CONCEPT_JRC =  C:\\users\\lelep\\Desktop\\marcos\\jrc-output\\concept
+CLASSES_PATH_JRC =  C:\\users\\lelep\\Desktop\\marcos\\jrc-output\\classes.txt
+CONCEPT_GRAPH_JRC =  C:\\users\\lelep\\Desktop\\marcos\\jrc-output\\co-occurrences.txt
+CONCEPTS_DESC_FILE_PATH =  C:\\users\\lelep\\Desktop\\marcos\\JRC3\\desc_en.xml
+CONCEPTS_UNDESC_FILE_PATH = C:\\users\\lelep\\Desktop\\marcos\\JRC3\\uf_en.xml
+CONCEPTS_HIERARCHY_FILE_PATH = C:\\users\\lelep\\Desktop\\marcos\\JRC3\\relation_bt.xml
+FEATURE_PATH_JRC =  C:\\users\\lelep\\Desktop\\marcos\\jrc-output\\features
+FEATURE_PROPAGATED_PATH_JRC =  C:\\users\\lelep\\Desktop\\marcos\\jrc-output\\propagated
 
 # -------------------------------------- REUTERS  ----------------------------------------- #
-CORPUS_REUTERS = /home/marcos/Projetos/.datasets/reuters/training
+CORPUS_REUTERS = /home/marcos/Projetos/.datasets/reuters/test
 TRAIN_REUTERS = /home/marcos/Projetos/.datasets/reuters/training
 TEST_REUTERS = /home/marcos/Projetos/.datasets/reuters/test
 INDEX_REUTERS = /home/marcos/Projetos/.datasets/reuters/output/index
@@ -52,5 +49,5 @@ CLASSES_PATH_REUTERS = /home/marcos/Projetos/.datasets/reuters/output/classes.tx
 CONCEPT_GRAPH_REUTERS = /home/marcos/Projetos/.datasets/reuters/output/co-occurrences.txt
 FEATURE_PATH_REUTERS = /home/marcos/Projetos/.datasets/reuters/output/features
 FEATURE_PROPAGATED_PATH_REUTERS = /home/marcos/Projetos/.datasets/reuters/output/propagated
-DATASET_REUTERS = training
+DATASET_REUTERS = test
 CLASSES_REUTERS = /home/marcos/Projetos/.datasets/reuters/cats.txt
